Se documento todo el codigo